# ChangeLog for net-misc/knemo
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/knemo/ChangeLog,v 1.4 2004/07/12 13:45:13 carlo Exp $

*knemo-0.1.10 (12 Jul 2004)

  12 Jul 2004; Carsten Lohrke <carlo@gentoo.org> +knemo-0.1.10.ebuild:
  version bump

*knemo-0.1.9 (10 Jul 2004)

  10 Jul 2004; Carsten Lohrke <carlo@gentoo.org> +knemo-0.1.9.ebuild:
  version bump

  29 Jun 2004; David Holm <dholm@gentoo.org> knemo-0.1.8.ebuild:
  Added to ~ppc.

*knemo-0.1.8 (28 Jun 2004)

  28 Jun 2004; Carsten Lohrke <carlo@gentoo.org> +metadata.xml,
  +knemo-0.1.8.ebuild:
  Initial ebuild. Thanks to Alberto Garcia Hierro.
