@@ -1,8 +1,10 @@
+MD5 73a6655288bb5ec9666d8c099d14cdd1 ChangeLog 680
 MD5 4dcdc0060058ec14e86019019dd45c55 knemo-0.1.8.ebuild 467
+MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
 MD5 7369e44f2787f75ae4f965fcd1011bc8 knemo-0.1.10.ebuild 730
 MD5 e708b207df88cca1c23c515b49c2fac8 knemo-0.1.9.ebuild 729
-MD5 73a6655288bb5ec9666d8c099d14cdd1 ChangeLog 680
-MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
+MD5 5f70a9d727b0076fdc44c5c76b8449e0 knemo-0.2.0.ebuild 731
 MD5 136f0131ef7b503e1ddffafe37798536 files/digest-knemo-0.1.8 70
-MD5 c1bb38f96750f6384e0c0b75d12a4294 files/digest-knemo-0.1.9 70
 MD5 ccfeff31f55e2c4ddb6bacf5cf3b5b37 files/digest-knemo-0.1.10 71
+MD5 c1bb38f96750f6384e0c0b75d12a4294 files/digest-knemo-0.1.9 70
+MD5 482ffd57d4bc20813b65166b5d11681e files/digest-knemo-0.2.0 70
