@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/knemo
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/knemo/ChangeLog,v 1.4 2004/07/12 13:45:13 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/knemo/ChangeLog,v 1.5 2004/08/01 20:36:17 centic Exp $
+
+*knemo-0.2.0 (01 Aug 2004)
+
+  01 Aug 2004; Dominik Stadler <centic@gentoo.org> +knemo-0.2.0.ebuild:
+  Add version 0.2.0, requested in Bug 59025
 
 *knemo-0.1.10 (12 Jul 2004)
 
